implementations/rust/ockam/ockam/tests/async_try_clone/fail_if_attr_crate_unsupported.rs
use ockam_core::AsyncTryClone;

#[derive(AsyncTryClone)]
#[async_try_clone(crate = "my_crate")]
pub struct Tmp {
    a: u32,
}

fn main() {}
